[package]
name = "hello_serial_port"
version = "0.1.0"
authors = ["Mary <nigaikun49@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.1"
cortex-m-rt = "0.6.11"
panic-halt = "0.2.0"
stm32f3xx-hal = {version = "0.4.0", features = ["stm32f303xc", "rt"]}
embedded-hal = "0.2.3"
nb = "0.1.2"

[patch.crates-io]
stm32f3xx-hal = {path = "E:/Games/Rust/stm32f3xx-hal"}